Refactoring labels, with generated keys